[package]
name = "pokemon-shakespeare"
version = "0.1.0"
authors = ["harry obaseki <harryobas@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
rocket_codegen = "0.4.7"
scraper = "0.12.0"
reqwest = {version = "0.11.2", features = ["blocking", "json"]}
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"


[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]


